---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused affine item
  ┌─ testinput:8:10
  │
8 │ entity x(resource: B) -> bool {
  │          ^^^^^^^^ This must be used
  │
  = Required because it.a.x is of type &mut


